<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <Button
            android:id="@+id/play_record_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/x_2"
            android:drawableEnd="@drawable/ic_play"
            android:text="@string/play_label"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/rename_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/x_3"
            android:drawableEnd="@drawable/ic_edit"
            android:text="@string/rename_label"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/red"
            android:drawableEnd="@drawable/ic_delete"
            android:text="@string/delete_label"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
