<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.record.RecorderXActivity">


    <ProgressBar
        android:id="@+id/controlled_progress_bar"
        style="@style/RecordTimerCircleProgressBar"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@+id/record_status_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/control_record_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/x_2"
        android:text="@string/control_record_btn_label_1"
        android:textColor="@color/white"
        app:icon="@drawable/ic_record"
        app:iconTint="@color/x_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/record_status_txt" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/saved_record_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/x_3"
        android:text="@string/btn_saved_record_label"
        android:textColor="@color/white"
        app:icon="@drawable/ic_saved_records"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/control_record_btn"
        app:layout_constraintVertical_bias="0.0" />

    <Chronometer
        android:id="@+id/record_chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/x_3"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="@+id/controlled_progress_bar"
        app:layout_constraintEnd_toEndOf="@+id/controlled_progress_bar"
        app:layout_constraintStart_toStartOf="@+id/controlled_progress_bar"
        app:layout_constraintTop_toTopOf="@+id/controlled_progress_bar" />

    <TextView
        android:id="@+id/record_status_txt"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/txt_user_indicator_start"
        app:layout_constraintBottom_toTopOf="@+id/control_record_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/controlled_progress_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>
